--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
-*,
-*::after,
-*::before {
+::before,
+::after {
   box-sizing: border-box;
 }
 
@@ -32,14 +31,6 @@ body {
   user-select: none;
 }
 
-.computer-deck {
-  background-color: green;
-}
-
-.player-deck {
-  background-color: blue;
-}
-
 .text {
   font-size: 55px;
   grid-column: span 2;
@@ -60,7 +51,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 4rem;
+  font-size: 6rem;
 }
 
 .card.red {
@@ -75,7 +66,7 @@ body {
 .card::after {
   position: absolute;
   content: attr(data-value);
-  font-size: 1rem;
+  font-size: 1.5rem;
 }
 
 .card::before {
